<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13baba"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dip"
        android:background="@drawable/icon"
        android:contentDescription="@string/icon" />

    <RelativeLayout
        android:id="@+id/account"
        android:layout_width="290dip"
        android:layout_height="48dip"
        android:layout_below="@+id/imgIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:background="@drawable/acc_pass_style" >

        <EditText
            android:id="@+id/edtAccount"
            android:layout_width="220dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dip"
            android:background="@drawable/acc_pass_style"
            android:hint="@string/hint_acc"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/icAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/ic_accout"
            android:contentDescription="@string/hint_acc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="290dip"
        android:layout_height="48dip"
        android:layout_below="@+id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:background="@drawable/acc_pass_style" >

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="220dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dip"
            android:background="@drawable/acc_pass_style"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/icPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/ic_password"
            android:contentDescription="@string/hint_pass" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="95dip"
        android:layout_height="48dip"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/acc_pass_style"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLoginFB"
        android:layout_width="190dip"
        android:layout_height="48dip"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dip"
        android:background="@drawable/loginfb_style"
        android:text="@string/loginFB"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dip"
        android:text="@string/forgot_pass"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="130dip"
        android:layout_height="0.5dip"
        android:layout_above="@+id/txtForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip"
        android:background="#FFFFFF" />

    

</RelativeLayout>